--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
+# Project-specific files
+data/jsonls
+generate_reqs.sh
+requirements.in
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
